--- a/src/css/profileSetup.module.css
+++ b/src/css/profileSetup.module.css
@@ -1,5 +1,5 @@
 .container {
-  width: 80%;
+  width: 1080px;
   margin: 30px auto 0 auto;
 }
 .main-img {
@@ -7,7 +7,6 @@
   position: relative;
 }
 .wrap {
-  width: 100%;
   background-color: #ffffff;
   border-radius: 30px 30px 0 0;
   z-index: 1;
@@ -27,14 +26,13 @@
   height: 120px;
 }
 .profile-update {
-  position: absolute;
-  overflow: hidden;
-  white-space: nowrap;
-  /*clip: rect(0, 0, 0, 0);*/
+  display: none;
+}
+.profile-img-btn {
   width: 120px;
   height: 120px;
-  /*background-color: red;*/
-  z-index: -1;
+  position: absolute;
+  z-index: 1;
 }
 .default-profile-img {
   width: 120px;
