style : 전체 스크롤 추가

--- a/src/index.css
+++ b/src/index.css
@@ -13,3 +13,18 @@ code {
   font-family: 'PretendardVariable'; /* 사용할 폰트의 이름을 정의 */
   src: url('./fonts/PretendardVariable.ttf'); /* 폰트 파일의 위치 */
 }
+
+::-webkit-scrollbar {
+  width: 4px; /* 세로축 스크롤바 폭 너비 */
+  height: 1px; /* 가로축 스크롤바 폭 너비 */
+} /* 스크롤바 막대 */
+::-webkit-scrollbar-thumb {
+  background: #82d3ac; /* 스크롤바 막대 색상 */
+  border-radius: 12px 12px 12px 12px;
+}
+
+/* 스크롤이 움직이는 뒷 배경 */
+::-webkit-scrollbar-track {
+  /* background: #d0d0d0;  */
+  /* 스크롤바 뒷 배경 색상 */
+}
