--- a/src/css/section.css
+++ b/src/css/section.css
@@ -1,7 +1,7 @@
 .section-container {
   font-family: 'PretendardVariable';
   width: 1080px;
-  margin: 11px auto 0px;
+  margin: 11px auto;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -24,12 +24,16 @@
   font-size: 32px;
   font-weight: 600;
 }
+.subtit div:first-child {
+  margin: 0 auto;
+}
 .section-img-container ul {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   width: 100%;
   gap: 10px;
+  padding-left: 0;
 }
 .section-img-container ul li {
   position: relative;
