--- a/src/css/join.module.css
+++ b/src/css/join.module.css
@@ -169,6 +169,27 @@
   border-radius: 8px;
   color: #ffffff;
 }
+.verify-message {
+  color: #a6a6a6;
+  position: absolute;
+  font-size: 12px;
+  border-bottom: 1px solid #a6a6a6;
+  cursor: pointer;
+  margin: 2px;
+}
+.fail-verify-message {
+  color: #ff8888;
+  position: absolute;
+  font-size: 12px;
+  margin: 2px;
+}
+.fail-verify-num-message {
+  color: #ff8888;
+  position: absolute;
+  font-size: 12px;
+  transform: translateY(20px);
+  margin: 2px;
+}
 .join-check {
   width: 140px;
   border: 1px solid #72d5a6;
