fix : 회원가입 유효성 수정

--- a/src/css/join.module.css
+++ b/src/css/join.module.css
@@ -170,6 +170,11 @@
   border-radius: 8px;
   color: #ffffff;
 }
+.message {
+  min-width: 300px;
+  height: 10px;
+  position: absolute;
+}
 .verify-message {
   color: #a6a6a6;
   position: absolute;
