--- a/src/css/noticeDetail.css
+++ b/src/css/noticeDetail.css
@@ -215,11 +215,13 @@
 }
 
 .notail-next-btn {
+  cursor: pointer;
   width: 1080px;
   border-bottom: 1px solid #eee;
 }
 
 .notail-prev-btn {
+  cursor: pointer;
   width: 1080px;
   border-top: 1px solid #eee;
   border-bottom: 1px solid #eee;
