--- a/src/css/write.css
+++ b/src/css/write.css
@@ -74,6 +74,12 @@ select {
   border: 1px solid #f2f2f2f2;
   color: #666;
 }
+.write-body {
+  width: 1080px;
+  border: 1px solid #f2f2f2f2;
+  border-radius: 8px;
+  outline: none;
+}
 
 .write-file-list {
   border: 1px solid #f2f2f2f2;
