--- a/src/css/latterwrite.module.css
+++ b/src/css/latterwrite.module.css
@@ -130,6 +130,8 @@
   border-radius: 8px;
 }
 .write-file-list ul {
+  height: 80px;
+  overflow: scroll;
   padding: 10px;
   display: flex;
   flex-direction: column;
