--- a/src/css/noticeDetail.css
+++ b/src/css/noticeDetail.css
@@ -22,21 +22,34 @@
   display: flex;
   flex-direction: row;
   padding: 0;
-  gap: 390px;
+  justify-content: space-between;
 }
 
-.notail-subtit-ul li {
+.notail-subtit-ul li:nth-child(1) {
   margin-left: 30px;
   display: flex;
   align-items: center;
   height: 50px;
-  width: 612px;
+}
+.notail-subtit-ul li:nth-child(2) {
+  margin-right: 30px;
+  display: flex;
+  align-items: center;
+  height: 50px;
 }
 
 .notail-subtit-ul li h3 {
   font-weight: 600;
   font-size: 16px;
   color: #ffffff;
+}
+.notail-subtit-ul li div span {
+  font-weight: 600;
+  font-size: 16px;
+  color: #ffffff;
+}
+.notail-subtit-ul li span:nth-child(2) {
+  margin-left:40px;
 }
 
 /* 게시글상세 본문영역 */
@@ -53,12 +66,11 @@
   width: 1080px;
 }
 .notail-files {
-  position: relative;
   cursor: pointer;
   font-size: 14px;
   position: absolute;
   right: 4%;
-  top:40%;
+  top:2%;
 } 
 .notail-files-list {
   position: absolute;
