--- a/src/mobile/css/mLogin.css
+++ b/src/mobile/css/mLogin.css
@@ -8,6 +8,19 @@
   align-items: center;
 }
 
+
+.social-login img {
+  cursor: pointer;
+}
+
+.social-login {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
 .login-wrapper {
   width: 420px;
   height: 489px;
@@ -22,23 +35,26 @@
   text-align: center;
 }
 
+.options-ul {
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
+}
+.options-ul li {
+  color: #a6a6a6;
+  font-size: 12px;
+  font-weight: 400;
+  cursor: pointer;
+  list-style: none;
+}
+
+
 .img-box {
   display: flex;
   justify-content: center;
   margin-top: 50px;
-}
-
-
-.social-login img {
-  cursor: pointer;
-}
-
-.social-login {
-  display: flex;
-  justify-content: center;
-  gap: 20px;
-  margin-top: 20px;
-  margin-bottom: 20px;
 }
 
 .other-login p:before {
@@ -83,20 +99,6 @@
   justify-content: center;
 }
 
-.options-ul {
-  margin: 0;
-  padding: 0;
-  display: flex;
-  flex-direction: row;
-  gap: 10px;
-}
-.options-ul li {
-  color: #a6a6a6;
-  font-size: 12px;
-  font-weight: 400;
-  cursor: pointer;
-  list-style: none;
-}
 
 .login-form {
   display: flex;
@@ -169,6 +171,10 @@
   border: none;
   cursor: pointer;
   padding: 11px;
+}
+
+.login {
+  overflow: hidden;
 }
 
 .main-login {
