--- a/src/mobile/css/mJoin.css
+++ b/src/mobile/css/mJoin.css
@@ -97,7 +97,7 @@
 }
 
 .join-form-subitem1 input {
-  margin-left: 10px;
+  margin-left: 3vw;
   font-family: inherit;
   font-size: 16px;
   border-radius: 8px;
@@ -117,7 +117,7 @@
 }
 
 .join-form-subitem2 input {
-  margin-left: 10px;
+  margin-left: 3vw;
   font-family: inherit;
   font-size: 16px;
   border-radius: 8px;
@@ -136,7 +136,7 @@
 }
 
 .join-form-subitem3 input {
-  margin-left: 10px;
+  margin-left: 3vw;
   font-family: inherit;
   font-size: 16px;
   border-radius: 8px;
@@ -165,7 +165,7 @@
   border: 1px solid #4ebba0;
 }
 .join-form-subitem4 textarea {
-  margin-left: 10px;
+  margin-left: 3vw;
   font-family: inherit;
   font-family: 'PretendardVariable' !important;
   font-size: 16px;
@@ -187,7 +187,7 @@
 }
 
 .join-form-subitem5 input {
-  margin-left: 10px;
+  margin-left: 3vw;
   font-family: inherit;
   font-size: 16px;
   border-radius: 8px;
@@ -211,28 +211,28 @@
 
 
 .id-fail-message {
-  margin-left: 10px;
+  margin-left: 10vw;
   font-size: 12px;
   color: #ff8888;
   position: absolute;
   transform: translate(5px, 50px);
 }
 .id-success-message {
-  margin-left: 10px;
+  margin-left: 3vw;
   font-size: 12px;
   color: #7ca9ed;
   position: absolute;
   transform: translate(5px, 50px);
 }
 .pw-fail-message {
-  margin-left: 10px;
+  margin-left: 3vw;
   font-size: 12px;
   color: #ff8888;
   position: absolute;
   transform: translate(5px, 50px);
 }
 .pw-success-message {
-  margin-left: 10px;
+  margin-left: 3vw;
   font-size: 12px;
   color: #7ca9ed;
   position: absolute;
@@ -242,7 +242,7 @@
   cursor: default;
 }
 .join-form-select-img {
-  transform: translate(310px, -35px);
+  transform: translate(84vw, -4.38vh);
 }
 .join-form-option {
   font-family: inherit;
@@ -437,6 +437,7 @@ input[type='number'] {
 .login-options {
   display: flex;
   justify-content: center;
+  margin-bottom: 50px;
 }
 
 .options-ul {
