--- a/src/pc/css/table.css
+++ b/src/pc/css/table.css
@@ -35,3 +35,10 @@
   font-size: 16px;
 }
 
+.common-table .common-table-tr2 td span {
+  width: 260px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: block;
+}
