revert: 메인화면 및 기관소개

--- a/src/pc/css/guide.css
+++ b/src/pc/css/guide.css
@@ -109,13 +109,13 @@
 }
 .guide-img1 {
   background: linear-gradient(0deg, rgba(255, 255, 255, 0.6) 40%, rgba(255, 255, 255, 0) 100%),
-    url('/public/배경꽃2.jpg');
+    url('/public/이용안내-이용시간.png');
   /* border-radius: 20px;
 background: linear-gradient(270deg, rgba(255, 255, 255, 0.00) 0%, #FFF 100%), url('/public/이용안내-이용시간.png'); */
 }
 .guide-img2 {
   background: linear-gradient(0deg, rgba(255, 255, 255, 0.6) 40%, rgba(255, 255, 255, 0) 100%),
-    url('/public/배경꽃.jpg');
+    url('/public/이용안내-이용문의.png');
 
   /* background: linear-gradient(270deg, rgba(255, 255, 255, 0.00) 0%, #FFF 100%), url('/public/이용안내-이용문의.png'); */
 }
