--- a/src/pc/css/section.css
+++ b/src/pc/css/section.css
@@ -10,6 +10,10 @@
   /* width: 100%; */
   height: 720px;
 }
+.wd100 {
+  width: 100%;
+  height: auto !important;
+}
 .main-img {
   filter: brightness(50%);
 }
