--- a/src/mobile/css/mMemberFind.css
+++ b/src/mobile/css/mMemberFind.css
@@ -1,62 +1,57 @@
-.join {
+.find {
   font-family: 'PretendardVariable';
 }
 
-.join-title {
-  font-weight: 600;
-  font-size: 24px;
-  color: #333333;
-  margin: 83px 0 25px 25px;
-}
-
-.normal-join {
+.find-type-btn {
   display: flex;
   justify-content: center;
-  align-items: center;
-  margin-top: 20px;
-}
-
-.normal-join-btn {
-  background: #82d3ac;
-  font-family: 'PretendardVariable';
-  font-weight: 700;
   font-size: 14px;
-  width: 343px;
-  height: 44px;
-  color: #ffffff;
-  border-radius: 8px;
-  border: none;
-  cursor: pointer;
-  padding: 11px;
+  button{
+    margin: 10px 0;
+    padding: 10px 20px;
+    cursor: pointer;
+    width: 165px;
+    border-bottom: 3px solid #82d3ac;
+  }
+  #id {
+    border-radius: 10px 0 0 0;
+  }
+  #pw {
+    border-radius: 0 10px 0 0;
+  }
+  button.check {
+    border: none;
+    background-color: #82d3ac;
+    color: white;
+    border-bottom: 3px solid #82d3ac;
+  }
+  button.non-check {
+    background-color: #ffffff;
+    color: #666666;
+    border: 0.4px solid #f2f2f2;
+    border-bottom: 3px solid #82d3ac;
+  }
 }
 
-
-.join-form-wrapper {
+.find-form-wrapper {
   display: flex;
+  justify-content: center;
   flex-direction: column;
   gap: 10px;
 }
-.join-form-item {
-  display: flex;
-  gap: 40px;
+
+.find-title {
+  font-weight: 600;
+  font-size: 16px;
+  color: #333333;
+  margin-left: 2vh;
 }
 
-.join-check1 {
-  width: 75px;
-  border: 1px solid #72d5a6;
-  background: #ffffff;
-  color: #333;
-  border-radius: 8px;
-  font-weight: 200;
-  font-size: 14px;
-  height: 44px;
-  font-family: inherit;
-  cursor: pointer;
-  margin-left: 5px;
-  margin-right: 10px;
+.find-form-item {
+
 }
 
-.join-check2 {
+.find-check2 {
   width: 100px;
   border: 1px solid #72d5a6;
   background: #ffffff;
@@ -71,46 +66,7 @@
   margin-right: 10px;
 }
 
-.outer-container {
-  width: 100%;
-  height: 100%;
-}
-.inner-container {
-  margin-bottom: 120px;
-}
-.form-container {
-  font-family: 'PretendardVariable';
-  width: 1280px;
-  height: 100%;
-  margin: 100px auto;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.join-outer-container {
-}
-
-.join-form-subitem1 input {
-  margin-left: 3vw;
-  font-family: inherit;
-  font-size: 16px;
-  border-radius: 8px;
-  border: 1px solid #f2f2f2;
-  /* border-color: #F2F2F2; */
-  width: 240px;
-  height: 40px;
-  transition: border 0.4s;
-  padding: 1px 2px 1px 10px;
-}
-.join-form-subitem1 input::placeholder {
-  color: rgba(128, 128, 128, 0.6);
-}
-.join-form-subitem1 input:focus {
-  outline: none;
-  border: 1px solid #4ebba0;
-}
-
-.join-form-subitem2 input {
+.find-form-subitem2 input {
   margin-left: 3vw;
   font-family: inherit;
   font-size: 16px;
@@ -121,15 +77,15 @@
   transition: border 0.4s;
   padding: 1px 2px 1px 10px;
 }
-.join-form-subitem2 input::placeholder {
+.find-form-subitem2 input::placeholder {
   color: rgba(128, 128, 128, 0.6);
 }
-.join-form-subitem2 input:focus {
+.find-form-subitem2 input:focus {
   outline: none;
   border: 1px solid #4ebba0;
 }
 
-.join-form-subitem3 input {
+.find-form-subitem3 input {
   margin-left: 3vw;
   font-family: inherit;
   font-size: 16px;
@@ -141,24 +97,24 @@
   transition: border 0.4s;
   padding: 1px 2px 1px 10px;
 }
-.join-form-subitem3 spanp {
+.find-form-subitem3 spanp {
   color: #a6a6a6;
 }
-.join-form-subitem3 input:nth-child(1) {
+.find-form-subitem3 input:nth-child(1) {
   margin-right: 4px;
 }
-.join-form-subitem3 input:nth-child(2) {
+.find-form-subitem3 input:nth-child(2) {
   margin-left: 4px;
 }
-.join-form-subitem3 input::placeholder {
+.find-form-subitem3 input::placeholder {
   color: rgba(128, 128, 128, 0.6);
 }
 
-.join-form-subitem3 input:focus {
+.find-form-subitem3 input:focus {
   outline: none;
   border: 1px solid #4ebba0;
 }
-.join-form-subitem4 textarea {
+.find-form-subitem4 textarea {
   margin-left: 3vw;
   font-family: inherit;
   font-family: 'PretendardVariable' !important;
@@ -172,37 +128,32 @@
   transition: border 0.4s;
   resize: none;
 }
-.join-form-subitem4 textarea:focus {
+.find-form-subitem4 textarea:focus {
   outline: none;
   border: 1px solid #4ebba0;
 }
-.join-form-subitem4 textarea::placeholder {
+.find-form-subitem4 textarea::placeholder {
   color: rgba(128, 128, 128, 0.6);
 }
 
-.join-form-subitem5 input {
+.find-form-subitem5 input {
   margin-left: 3vw;
   font-family: inherit;
   font-size: 16px;
   border-radius: 8px;
   border: 1px solid #f2f2f2;
-  /* border-color: #F2F2F2; */
   width: 220px;
   height: 40px;
   transition: border 0.4s;
   padding: 1px 2px 1px 10px;
 }
-.join-form-subitem5 input::placeholder {
+.find-form-subitem5 input::placeholder {
   color: rgba(128, 128, 128, 0.6);
 }
-.join-form-subitem5 input:focus {
+.find-form-subitem5 input:focus {
   outline: none;
   border: 1px solid #4ebba0;
 }
-
-
-
-
 
 .id-fail-message {
   margin-left: 10vw;
@@ -232,24 +183,27 @@
   position: absolute;
   transform: translate(5px, 50px);
 }
-.join-form-select {
+.find-form-select {
   cursor: default;
 }
-.join-form-select-img {
+.find-form-select-img {
   transform: translate(84vw, -4.38vh);
 }
-.join-form-option {
+.find-form-option {
+  line-height: 2;
+  list-style-type: none;
+  margin-left: 4vw;
+  margin-top: -7vw;
+  margin-bottom: 8vw;
+  caret-color: transparent;
   font-family: inherit;
-  font-weight: 200;
-  font-size: 16px;
-  width: 320px;
-  /*transition: border 0.4s;*/
-  position: absolute;
+  font-weight: 300;
+  font-size: 12px;
+  width: 315px;
   background-color: #ffffff;
-  padding: 4px 6px;
+  padding: 6px;
   border: 1px solid #f2f2f2;
   border-radius: 8px;
-  margin-top: 5px;
   z-index: 1;
 }
 .option {
@@ -294,22 +248,22 @@
   color: #ff8888;
   display: none;
 }
-.join-btns-wrapper {
+.find-btns-wrapper {
   margin-top: 50px;
   gap: 50px;
 }
-.cancel-join-btn {
+.cancel-find-btn {
   border: 1px solid #72d5a6;
   background: #ffffff;
   color: #333;
 }
-.join-btn {
+.find-btn {
   border: none;
   background: #82d3ac;
   color: #ffffff;
   margin-bottom: 15px;
 }
-.join-btns-wrapper button {
+.find-btns-wrapper button {
   border-radius: 8px;
   font-weight: 600;
   font-size: 16px;
@@ -318,16 +272,16 @@
   font-family: inherit;
   cursor: pointer;
 }
-.other-join-form {
+.other-find-form {
   transform: translateX(-13px);
 }
-.other-join p {
+.other-find p {
   font-weight: 400;
   font-size: 12px;
   color: #a6a6a6;
   text-align: center;
 }
-.other-join p:before {
+.other-find p:before {
   margin: 0 5px 3px 0;
   content: '';
   display: inline-block;
@@ -335,7 +289,7 @@
   height: 1px;
   background: #f2f2f2;
 }
-.other-join p:after {
+.other-find p:after {
   content: '';
   display: inline-block;
   width: 175px;
@@ -343,22 +297,25 @@
   background: #f2f2f2;
   margin: 0 0 3px 5px;
 }
-.social-join img {
+.social-find img {
   cursor: pointer;
 }
-.social-join {
+.social-find {
   display: flex;
   justify-content: center;
   gap: 20px;
   margin-top: 20px;
   margin-bottom: 20px;
 }
-.join-options {
+.find-options {
   display: flex;
   justify-content: center;
 }
 
 
+.margin-top10 {
+  margin-top: 10px;
+}
 .margin-top30 {
   margin-top: 30px;
 }
